k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nbes
  labels:
    app.kubernetes.io/name: nbes
